adicionei um p e modifique a tag anterior de p para h1 :)

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>versionamento git</title>
 </head>
 <body>
-    <p>
+    <h1>
         oláa git, tudo bom?
+    </h1>
+    <p>
+        estudando versionamento dia 31, agora implementando alterações no GIT C::
     </p>
 </body>
 </html>
