my frist commit for the GitHub c:

--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
     <p>
         estudando versionamento dia 31, agora implementando alterações no GIT C::
     </p>
+
+    <p>
+        É... até agora está interressante a aula, estou em 11 de 14, mas basicamente falta 2 para terminar esse assunto!
+        Não é tão difícil. :]
+    </p>
 </body>
 </html>
