atualização do meus estudos do dia 31, 17:30 no versionamento com GIT

--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
         É... até agora está interressante a aula, estou em 11 de 14, mas basicamente falta 2 para terminar esse assunto!
         Não é tão difícil. :]
     </p>
+
+    <p>
+        São 17:30 e não finalizei ainda (comecei de manhã...)
+    </p>
 </body>
 </html>
